# osc-osd

./: .gitignore  .gitmodules  Makedefs  Makefile  README  gituptodate  make_all.sh  svn_fetch3.sh  svn_fetch_start.sh  up  up-pan
osd-initiator/: Makefile  README  command.c  command.h  device.c  device.h  drivelist.c  drivelist.h  sense.c  sense.h  sync.c  sync.h
osd-initiator/python/: Makefile  README  attr.c  command.c  const.c  device.c  drivelist.c  eat-tur.py  pvfs-init.py  pvfs-osd-integrated-init.py  pyosd.c  pyosd.h  readfile.py  target-cdb.py  target-osd.py  test-bidi.py  test-collection.py  test-rw.py  test.py
osd-initiator/tests/: Makefile  alignment-rdma.c  alignment.c  atomic.c  attr-all.c  blk-iospeed.c  contention.c  generic_iface_test.c  init-cont.py  iospeed-ddt.c  iospeed-mpi.c  iospeed.c  iospeed2.c  iovec.c  latency.c  run-cont  run-cont.py  run-lat.sh  run_par.sh  sgdd.py  sgio.c  sgl_test.c  stats.py
osd-target/: Makefile  README  attr-mgmt-sqlite.c  attr-mgmt-sqlite.h  attr.c  attr.h  cdb.c  cdb.h  coll.c  coll.h  db.c  db.h  list-entry.c  list-entry.h  mtq.c  mtq.h  notes  obfs-types.h  obfs.c  obfs.h  obj.c  obj.h  object-collection.c  object-collection.h  osd-defs.h  osd-sense.c  osd-sense.h  osd-types.h  osd.c  osd.h  osd.schema  target-defs.h  target-sense.h  todo  tracking.c  tracking.h  util.c  util.h  valgrindify
osd-target/patch/: 0001-osd-emulation-backingstore.patch  0002-local-makefile-changes.patch  0003-local-auto-config.patch  0004-local-allow-non-root-to-run.patch  0005-local-logging-changes.patch  0006-iscsi-increase-dlength.patch  0007-iscsi-tcp-nodelay.patch  01-osd-emulation-backingstore.patch  02-local-makefile-changes.patch  03-local-auto-config.patch  04-local-allow-non-root-to-run.patch  05-local-logging-changes.patch  06-iscsi-increase-dlength.patch  07-iscsi-tcp-nodelay.patch
osd-target/tests/: Makefile  cdb-manip.c  cdb-manip.h  cdb-test.c  command.c  command.h  create.c  db-test.c  getattr.c  iospeed.c  list.c  osd-test.c  query.c  results.db  results.py  runtests.py  set_member_attributes.c  setattr.c  table.py  tests.py  time-coll.c  time-db.c  unit-test
osd-util/: Makefile  README  initiator  osd-defs.h  osd-sense.h  osd-util.c  osd-util.h  perf.py
osd_initiator/: AUTHORS  ChangeLog  Makefile  Makefile.am  README  acinclude.m4  autogen.sh  cdb_manip.c  cdb_manip.h  command.c  command.h  configure.in  device.c  device.h  diskinfo.c  drivelist.c  drivelist.h  generic_iface.c  generic_iface.h  interface.c  interface.h  kernel_interface.c  kernel_interface.h  libosd.pc.in  osd_cmds.h  pvfs_iface.c  pvfs_iface.h  sense.c  sense.h  sync.c  sync.h  user_interface.c  user_interface.h  user_interface_sgio.c  user_interface_sgio.h
osd_initiator/kernel/: Makefile  Makefile.am  Makefile.in  gd.patch  so.c  suo.c  suo_ioctl.h
osd_initiator/libosd/: Makefile  Makefile.am  Makefile.in  common.h  diskinfo.c  diskinfo.h  interface.c  interface.h  osd_attr.h  osd_attr_defs.h  osd_attr_numbers.h  osd_attr_pages.h  osd_cdb.h  osd_cdb_cmd.h  osd_cdb_formats.h  osd_defs.h  osd_formats.h  osd_hdr.h  osd_ops.c  osd_ops.h  osd_ops_utils.h  osd_req.c  osd_req.h  osd_req_imp.h  osd_sense.h  osd_test_cmd.c  osd_test_cmd.h  osd_trace.c  osd_trace.h  osd_util.h  osd_version.h  util.c  util.h  write.c
osd_initiator/python/: Makefile  Makefile.am  Makefile.in  attr.c  command.c  const.c  device.c  drivelist.c  extract.py  libosd.pyx  libosdpython.h  libosdpython.pxd.in  libosdpython.pyx  osd.i.in  pyosd.c  pyosd.h  target-cdb.py  target-osd.py  test-bidi.py  test-collection.py  test-rw.py  test.c  test.py  test_serial.py
osd_initiator/tests/: Makefile  Makefile.am  basic_write.c  command.c  generic_iface_test.c  iospeed-mpi.c  iospeed.c  latency.c  pvfs_iface_test.c  run_par.sh  sgio.c
tests/osd-target/: Makefile  iospeed.c
util/: Makefile  bsg.h  osd-defs.h  osd-sense.h  osd-util.c  osd-util.h  util.c  util.h
