dnl Process this file with autoconf to produce a configure script.
AC_INIT([osd_initiator], [0.1], [bettsp@osc.edu])
AC_CANONICAL_SYSTEM
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Sets kernel headers variable
AC_ARG_WITH(kernel-dir, [AC_HELP_STRING([--with-kernel-dir=DIR],
[Compile the kernel module against the kernel source in DIR])],
[with_kernel_dir="$withval"], [with_kernel_dir="no"])
KDIR="/lib/modules/`uname -r`/build"
if test "x${with_kernel_dir}" != "xno" ; then
	KDIR="${with_kernel_dir}"
fi
AC_SUBST(KDIR)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )

AC_HEADER_MAJOR
AC_FUNC_ALLOCA
AC_STRUCT_TM
AC_STRUCT_ST_BLOCKS
AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNCS(mkfifo)
AC_CHECK_FUNC(mknod)

AC_OUTPUT([
	   Makefile
	   kernel/Makefile
	   libosd/Makefile
	])
